# PICO_UNI

./: .gitignore  CMakeLists.txt  README.md
pio/st7789_lcd/: st7789_lcd.c
spi/spi_master_slave/spi_master/: CMakeLists.txt  readme.txt  spi_master.cpp
spi/spi_master_slave/spi_master/devices/: DAC8563.cpp  DAC8563.hpp
spi/spi_master_slave/spi_master/loop/: main_core.cpp  main_core.hpp
spi/spi_master_slave/spi_master/loop/common_data/: common_variables.cpp  common_variables.hpp  device_variables.cpp  device_variables.hpp
spi/spi_master_slave/spi_master/physical_devices/: LinearDriver.cpp  LinearDriver.hpp  scanner.cpp  scanner.hpp
spi/spi_master_slave/spi_master/transceiver/: rx_core.cpp  rx_core.hpp
spi/spi_master_slave/spi_master/transceiver/rx_utils/: parser.cpp
spi/spi_master_slave/spi_master/utilities/: FlashIO.cpp  debug_logger.hpp  hardcoded_functions.cpp  hardcoded_functions.hpp  peripheral_functions.cpp  peripheral_functions.hpp
spi/spi_master_slave/spi_master/utilities/base_types/: Spi.cpp
uart-uart/: CMakeLists.txt  irq.cpp  uart.cpp
uart/hello_uart/: hello_uart.c
